vlib/v/parser/tests/struct_init_array_field_with_curly_braces_err.vv
struct Foo {}

fn new_foo() Foo {
	return Foo{}
}

struct Bar {
	foos []Foo
}

fn main() {
	_ := Bar{
		foos: {
			new_foo()
			new_foo()
		}
	}
}
